# Real-time-WS

./: .gitignore  TODO.txt  Thumbs.db  abb.pptx  client1.html  client2.html  hello_http.js  index.html  names.txt  obhajoba.pptx  package.json  resp.js  server.js  socket_stream.txt  start.bat  test.js  vlastni_dp.doc
ST/: coocox.cogui  coocox.coproj  test-coocox.cogui  test-coocox.coproj
ST/coocox/: MatrixDisplay.c  coocox.coproj
ST/coocox/coocox.elf.xcodeproj/: project.pbxproj
ST/test/: main.c  test.cogui  test.coproj
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324x9I_EVAL/Applications/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324x9I_EVAL/Demonstrations/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324x9I_EVAL/Examples/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324x9I_EVAL/Templates/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324xG_EVAL/Applications/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324xG_EVAL/Demonstrations/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324xG_EVAL/Examples/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Projects/STM324xG_EVAL/Templates/: Release_Notes.html
ST/test/STM32Cube_FW_F4_V1.3.0/Utilities/Log/: lcd_log_conf.h
ST/test/example/: EXTI.c  stm32f0308_discovery.c  stm32f0308_discovery.h  stm32f0xx_it.c  stm32f0xx_it.h
ST/test/test/test.elf.xcodeproj/: project.pbxproj
STM32/: concentrator.cogui  concentrator.coproj  main.c
STM32/concentrator/concentrator.elf.xcodeproj/: project.pbxproj
STM32/headers/: concentrator.h  main.h
STM32/headers/HAL/: stm32f4xx_hal_conf.h
client/views/: index.jade
concentrator/: client.js  package.json
concentrator-1/: CMakeLists.txt
concentrator-1/Inc/: LCDConf_stm322xg_eval.h  concentrator.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  udp.h
concentrator-1/MDK-ARM/: Project.uvgui.Martin  Project.uvguix.Martin  Project.uvopt  Project.uvoptx  Project.uvproj  Project.uvprojx  startup_stm32f407xx.lst
concentrator-1/Src/: GUIConf_stm322xg_eval.c  LCDConf_stm322xg_eval.c  concentrator.c  main.c  resp.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tcp.c  udp.c
concentrator-1/Utilities/Media/Images/: Thumbs.db
concentrator-2/Drivers/BSP/STM324xG_EVAL/: stm324xg_eval_lcd.h
concentrator-2/Inc/: concentrator.h  main.h
concentrator-2/MDK-ARM/: Project.uvgui.Martin  Project.uvopt
concentrator-2/Src/: main.c  resp.c
concentrator-2/Utilities/Log/: lcd_log_conf.h
concentrator/Drivers/BSP/STM324xG_EVAL/: stm324xg_eval_lcd.h
concentrator/Inc/: concentrator.h  main.h
concentrator/MDK-ARM/: Project.uvgui.Martin  Project.uvopt  startup_stm32f407xx.lst
concentrator/MDK-ARM/STM3240G-EVAL/: Project_STM3240G-EVAL.dep  STM3240G-EVAL.axf  STM3240G-EVAL.build_log.htm  STM3240G-EVAL.htm  STM3240G-EVAL.lnp  STM3240G-EVAL.map  api_lib.crf  api_lib.d  api_msg.crf  api_msg.d  app_ethernet.crf  app_ethernet.d  autoip.crf  autoip.d  concentrator.crf  concentrator.d  cs43l22.crf  cs43l22.d  def.crf  def.d  dhcp.crf  dhcp.d  dns.crf  dns.d  err.crf  err.d  etharp.crf  etharp.d  ethernetif.crf  ethernetif.d  icmp.crf  icmp.d  igmp.crf  igmp.d  ili9325.crf  ili9325.d  inet.crf  inet.d  inet_chksum.crf  inet_chksum.d  (+162 more)
concentrator/Src/: concentrator.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
doc/: BP_DP_desky_150213_1502D_priloha_1.doc  Thumbs.db  abstract.tex  abstrakt.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  main.blg  main.ilg  main.nlo  main.out  main.tex  main_bez_zadani.tex  podekovani.tex  prohlaseni.tex  uvod.tex  zadani.tex  zaver.tex
doc/img/: Thumbs.db  speedy - obhajoba.vsdx  speedy.vsdx
layout/: index.html
layout/css/: cover.css  demo2.css  demo_styles.css
layout/js/: demo.js
sailsjs/api/controllers/: ConnectController.js  HomepageController.js
sailsjs/api/hooks/: routine.js  websocket.js
sailsjs/api/hooks/TCP/: index.js
sailsjs/api/hooks/UDP/: index.js
sailsjs/api/policies/: canonize.js
sailsjs/api/services/: Redis.js
sailsjs/assets/js/: data.js  main.js
sailsjs/assets/styles/: importer.less
sailsjs/assets/styles/mixins/: default.less
sailsjs/assets/styles/variables/: colors.less
sailsjs/config/: connections.js  globals.js  models.js  routes.js  session.js  sockets.js
sailsjs/views/: 404.ejs  500.ejs  homepage.ejs  layout.ejs
sailsjs/views/Device/: index.ejs
sailsjs/views/Documentation/: index.ejs
sailsjs/views/Homepage/: index.ejs
server/: app.js  client.js  package.json  server.js  socket.js
server-deprecated/: package.json
server-deprecated/controllers/homepage/: index.js
server-deprecated/public/javascripts/: website.js
server-deprecated/public/stylesheets/: style.css
server-deprecated/tests/: app.js
server-deprecated/views/error/: 404.jade  5xx.jade
server/api/controllers/: ConnectController.js  DeviceController.js  DisconnectController.js  HomepageController.js
server/api/hooks/: routine.js  websocket.js
server/api/hooks/TCP/: index.js
server/api/hooks/UDP/: index.js
server/api/services/: DevicesService.js  FunctionsService.js  RedisService.js
server/app/: package.json
server/app/public/javascripts/: main.js
server/app/public/stylesheets/: style.css
server/app/routes/: admin.js  api.js
server/app/views/: admin.jade  api.jade  index.jade  layout.jade
server/assets/js/: main.js
server/assets/styles/: importer.less
server/config/: models.js  policies.js  routes.js  views.js
server/controllers/test/: index.js
server/public/images/: Thumbs.db
server/public/javascripts/: main.js  map.js  website.js
server/public/stylesheets/: map.css  style.css  style.less
server/routes/: admin.js  index.js  test.js
server/views/: 403.ejs  admin.jade  index.jade  layout.ejs  layout.jade  layout2.jade  map.jade  test.jade
server/views/Device/: index.ejs
server/views/Documentation/: index.ejs
server/views/Homepage/: index.ejs
server/views/blocks/: adminMenu.jade
server/views/homepage/: index.jade
server/views/test/: index.jade  index2.jade
(+930 files in other folders)
