cmake_minimum_required(VERSION 2.8.4)
project(concentrator_1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Drivers/BSP/Components/ampire480272/ampire480272.h
    Drivers/BSP/Components/ampire640480/ampire640480.h
    Drivers/BSP/Components/Common/accelero.h
    Drivers/BSP/Components/Common/audio.h
    Drivers/BSP/Components/Common/camera.h
    Drivers/BSP/Components/Common/gyro.h
    Drivers/BSP/Components/Common/io.h
    Drivers/BSP/Components/Common/lcd.h
    Drivers/BSP/Components/Common/ts.h
    Drivers/BSP/Components/Common/tsensor.h
    Drivers/BSP/Components/cs43l22/cs43l22.c
    Drivers/BSP/Components/cs43l22/cs43l22.h
    Drivers/BSP/Components/ili9320/ili9320.c
    Drivers/BSP/Components/ili9320/ili9320.h
    Drivers/BSP/Components/ili9325/ili9325.c
    Drivers/BSP/Components/ili9325/ili9325.h
    Drivers/BSP/Components/ili9341/ili9341.c
    Drivers/BSP/Components/ili9341/ili9341.h
    Drivers/BSP/Components/l3gd20/l3gd20.c
    Drivers/BSP/Components/l3gd20/l3gd20.h
    Drivers/BSP/Components/lis302dl/lis302dl.c
    Drivers/BSP/Components/lis302dl/lis302dl.h
    Drivers/BSP/Components/lis3dsh/lis3dsh.c
    Drivers/BSP/Components/lis3dsh/lis3dsh.h
    Drivers/BSP/Components/lsm303dlhc/lsm303dlhc.c
    Drivers/BSP/Components/lsm303dlhc/lsm303dlhc.h
    Drivers/BSP/Components/ov2640/ov2640.c
    Drivers/BSP/Components/ov2640/ov2640.h
    Drivers/BSP/Components/st7735/st7735.c
    Drivers/BSP/Components/st7735/st7735.h
    Drivers/BSP/Components/stmpe1600/stmpe1600.c
    Drivers/BSP/Components/stmpe1600/stmpe1600.h
    Drivers/BSP/Components/stmpe811/stmpe811.c
    Drivers/BSP/Components/stmpe811/stmpe811.h
    Drivers/BSP/Components/ts3510/ts3510.c
    Drivers/BSP/Components/ts3510/ts3510.h
    Drivers/BSP/Components/wm8994/wm8994.c
    Drivers/BSP/Components/wm8994/wm8994.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_audio.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_audio.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_camera.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_camera.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_eeprom.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_eeprom.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_io.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_io.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_lcd.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_lcd.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_sd.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_sd.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_sram.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_sram.h
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_ts.c
    Drivers/BSP/STM324xG_EVAL/stm324xg_eval_ts.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xc.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xe.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f405xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f407xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f411xe.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f415xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f417xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f427xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f429xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f437xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f439xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
    Drivers/CMSIS/Include/arm_common_tables.h
    Drivers/CMSIS/Include/arm_const_structs.h
    Drivers/CMSIS/Include/arm_math.h
    Drivers/CMSIS/Include/core_cm0.h
    Drivers/CMSIS/Include/core_cm0plus.h
    Drivers/CMSIS/Include/core_cm3.h
    Drivers/CMSIS/Include/core_cm4.h
    Drivers/CMSIS/Include/core_cm4_simd.h
    Drivers/CMSIS/Include/core_cmFunc.h
    Drivers/CMSIS/Include/core_cmInstr.h
    Drivers/CMSIS/Include/core_sc000.h
    Drivers/CMSIS/Include/core_sc300.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_can.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_conf_template.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_crc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma2d.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_eth.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hcd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_irda.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_iwdg.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nand.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nor.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pccard.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rng.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sdram.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_smartcard.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sram.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_usart.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_wwdg.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fsmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_sdmmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usb.h
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_can.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma2d.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_eth.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_irda.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_iwdg.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp_template.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nand.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nor.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pccard.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sdram.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_smartcard.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sram.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_usart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_wwdg.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fsmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_sdmmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
    Inc/app_ethernet.h
    Inc/ethernetif.h
    Inc/lwipopts.h
    Inc/main.h
    Inc/stm32f4xx_hal_conf.h
    Inc/stm32f4xx_it.h
    Inc/tcp.h
    Inc/udp.h
    Middlewares/Third_Party/LwIP/src/api/api_lib.c
    Middlewares/Third_Party/LwIP/src/api/api_msg.c
    Middlewares/Third_Party/LwIP/src/api/err.c
    Middlewares/Third_Party/LwIP/src/api/netbuf.c
    Middlewares/Third_Party/LwIP/src/api/netdb.c
    Middlewares/Third_Party/LwIP/src/api/netifapi.c
    Middlewares/Third_Party/LwIP/src/api/sockets.c
    Middlewares/Third_Party/LwIP/src/api/tcpip.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/autoip.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/icmp.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/igmp.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/inet.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/inet_chksum.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/ip.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/ip_addr.c
    Middlewares/Third_Party/LwIP/src/core/ipv4/ip_frag.c
    Middlewares/Third_Party/LwIP/src/core/ipv6/icmp6.c
    Middlewares/Third_Party/LwIP/src/core/ipv6/inet6.c
    Middlewares/Third_Party/LwIP/src/core/ipv6/ip6.c
    Middlewares/Third_Party/LwIP/src/core/ipv6/ip6_addr.c
    Middlewares/Third_Party/LwIP/src/core/snmp/asn1_dec.c
    Middlewares/Third_Party/LwIP/src/core/snmp/asn1_enc.c
    Middlewares/Third_Party/LwIP/src/core/snmp/mib2.c
    Middlewares/Third_Party/LwIP/src/core/snmp/mib_structs.c
    Middlewares/Third_Party/LwIP/src/core/snmp/msg_in.c
    Middlewares/Third_Party/LwIP/src/core/snmp/msg_out.c
    Middlewares/Third_Party/LwIP/src/core/def.c
    Middlewares/Third_Party/LwIP/src/core/dhcp.c
    Middlewares/Third_Party/LwIP/src/core/dns.c
    Middlewares/Third_Party/LwIP/src/core/init.c
    Middlewares/Third_Party/LwIP/src/core/lwip_timers.c
    Middlewares/Third_Party/LwIP/src/core/mem.c
    Middlewares/Third_Party/LwIP/src/core/memp.c
    Middlewares/Third_Party/LwIP/src/core/netif.c
    Middlewares/Third_Party/LwIP/src/core/pbuf.c
    Middlewares/Third_Party/LwIP/src/core/raw.c
    Middlewares/Third_Party/LwIP/src/core/stats.c
    Middlewares/Third_Party/LwIP/src/core/sys.c
    Middlewares/Third_Party/LwIP/src/core/tcp.c
    Middlewares/Third_Party/LwIP/src/core/tcp_in.c
    Middlewares/Third_Party/LwIP/src/core/tcp_out.c
    Middlewares/Third_Party/LwIP/src/core/udp.c
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/autoip.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/icmp.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/igmp.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/inet.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/inet_chksum.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/ip.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/ip_addr.h
    Middlewares/Third_Party/LwIP/src/include/ipv4/lwip/ip_frag.h
    Middlewares/Third_Party/LwIP/src/include/ipv6/lwip/icmp.h
    Middlewares/Third_Party/LwIP/src/include/ipv6/lwip/inet.h
    Middlewares/Third_Party/LwIP/src/include/ipv6/lwip/ip.h
    Middlewares/Third_Party/LwIP/src/include/ipv6/lwip/ip_addr.h
    Middlewares/Third_Party/LwIP/src/include/lwip/api.h
    Middlewares/Third_Party/LwIP/src/include/lwip/api_msg.h
    Middlewares/Third_Party/LwIP/src/include/lwip/arch.h
    Middlewares/Third_Party/LwIP/src/include/lwip/debug.h
    Middlewares/Third_Party/LwIP/src/include/lwip/def.h
    Middlewares/Third_Party/LwIP/src/include/lwip/dhcp.h
    Middlewares/Third_Party/LwIP/src/include/lwip/dns.h
    Middlewares/Third_Party/LwIP/src/include/lwip/err.h
    Middlewares/Third_Party/LwIP/src/include/lwip/init.h
    Middlewares/Third_Party/LwIP/src/include/lwip/lwip_timers.h
    Middlewares/Third_Party/LwIP/src/include/lwip/mem.h
    Middlewares/Third_Party/LwIP/src/include/lwip/memp.h
    Middlewares/Third_Party/LwIP/src/include/lwip/memp_std.h
    Middlewares/Third_Party/LwIP/src/include/lwip/netbuf.h
    Middlewares/Third_Party/LwIP/src/include/lwip/netdb.h
    Middlewares/Third_Party/LwIP/src/include/lwip/netif.h
    Middlewares/Third_Party/LwIP/src/include/lwip/netifapi.h
    Middlewares/Third_Party/LwIP/src/include/lwip/opt.h
    Middlewares/Third_Party/LwIP/src/include/lwip/pbuf.h
    Middlewares/Third_Party/LwIP/src/include/lwip/raw.h
    Middlewares/Third_Party/LwIP/src/include/lwip/sio.h
    Middlewares/Third_Party/LwIP/src/include/lwip/snmp.h
    Middlewares/Third_Party/LwIP/src/include/lwip/snmp_asn1.h
    Middlewares/Third_Party/LwIP/src/include/lwip/snmp_msg.h
    Middlewares/Third_Party/LwIP/src/include/lwip/snmp_structs.h
    Middlewares/Third_Party/LwIP/src/include/lwip/sockets.h
    Middlewares/Third_Party/LwIP/src/include/lwip/stats.h
    Middlewares/Third_Party/LwIP/src/include/lwip/sys.h
    Middlewares/Third_Party/LwIP/src/include/lwip/tcp.h
    Middlewares/Third_Party/LwIP/src/include/lwip/tcp_impl.h
    Middlewares/Third_Party/LwIP/src/include/lwip/tcpip.h
    Middlewares/Third_Party/LwIP/src/include/lwip/udp.h
    Middlewares/Third_Party/LwIP/src/include/netif/etharp.h
    Middlewares/Third_Party/LwIP/src/include/netif/ppp_oe.h
    Middlewares/Third_Party/LwIP/src/include/netif/slipif.h
    Middlewares/Third_Party/LwIP/src/include/posix/sys/socket.h
    Middlewares/Third_Party/LwIP/src/include/posix/netdb.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/auth.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/auth.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/chap.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/chap.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/chpms.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/chpms.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/fsm.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/fsm.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/ipcp.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/ipcp.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/lcp.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/lcp.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/magic.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/magic.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/md5.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/md5.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/pap.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/pap.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/ppp.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/ppp.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/ppp_impl.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/ppp_oe.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/pppdebug.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/randm.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/randm.h
    Middlewares/Third_Party/LwIP/src/netif/ppp/vj.c
    Middlewares/Third_Party/LwIP/src/netif/ppp/vj.h
    Middlewares/Third_Party/LwIP/src/netif/etharp.c
    Middlewares/Third_Party/LwIP/src/netif/ethernetif_template.c
    Middlewares/Third_Party/LwIP/src/netif/slipif.c
    Middlewares/Third_Party/LwIP/system/arch/bpstruct.h
    Middlewares/Third_Party/LwIP/system/arch/cc.h
    Middlewares/Third_Party/LwIP/system/arch/cpu.h
    Middlewares/Third_Party/LwIP/system/arch/epstruct.h
    Middlewares/Third_Party/LwIP/system/arch/init.h
    Middlewares/Third_Party/LwIP/system/arch/lib.h
    Middlewares/Third_Party/LwIP/system/arch/perf.h
    Middlewares/Third_Party/LwIP/system/arch/sys_arch.h
    Middlewares/Third_Party/LwIP/system/noOS/ethernetif.h
    Middlewares/Third_Party/LwIP/system/OS/ethernetif.h
    Middlewares/Third_Party/LwIP/system/OS/sys_arch.c
    Src/app_ethernet.c
    Src/ethernetif.c
    Src/main.c
    Src/resp.c
    Src/stm32f4xx_hal_msp.c
    Src/stm32f4xx_it.c
    Src/system_stm32f4xx.c
    Src/tcp.c
    Src/udp.c
    Utilities/CPU/cpu_utils.c
    Utilities/CPU/cpu_utils.h
    Utilities/Fonts/font12.c
    Utilities/Fonts/font16.c
    Utilities/Fonts/font20.c
    Utilities/Fonts/font24.c
    Utilities/Fonts/font8.c
    Utilities/Fonts/fonts.h
    Utilities/Log/lcd_log.c
    Utilities/Log/lcd_log.h
    Utilities/Log/lcd_log_conf.h
    Utilities/Log/lcd_log_conf_template.h)

add_executable(concentrator_1 ${SOURCE_FILES})